add: add pinterest logic
